--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+APScheduler==3.8.1
 asgiref==3.4.1
 auth0-python==3.19.0
 certifi==2021.10.8
@@ -20,10 +21,12 @@ PyJWT==2.3.0
 python-decouple==3.5
 python3-openid==3.2.0
 pytz==2021.3
+pytz-deprecation-shim==0.1.0.post0
 requests==2.27.1
 requests-oauthlib==1.3.0
 six==1.16.0
 social-auth-core==4.1.0
 sqlparse==0.4.2
 tzdata==2021.5
+tzlocal==4.1
 urllib3==1.26.8
