--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "mobile-detect": "1.4.5",
         "moment": "2.29.1",
         "notistack": "1.0.6-next.3",
+        "otp-input-react": "^0.3.0",
         "perfect-scrollbar": "1.5.3",
         "prismjs": "1.25.0",
         "prop-types": "15.7.2",
@@ -62,6 +63,7 @@
         "react-imask": "6.2.2",
         "react-masonry-css": "1.0.16",
         "react-number-format": "4.8.0",
+        "react-otp-input": "^2.4.0",
         "react-popper": "1.3.11",
         "react-redux": "7.2.6",
         "react-router-dom": "6.1.1",
