--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
         "marked": "0.8.2",
         "material-ui-popup-state": "2.0.0",
         "mobile-detect": "1.4.5",
-        "moment": "2.29.1",
+        "moment": "^2.29.1",
         "notistack": "1.0.6-next.3",
         "otp-input-react": "^0.3.0",
         "perfect-scrollbar": "1.5.3",
