--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
         "react-virtualized": "9.22.3",
         "react-window": "1.8.6",
         "redux-logger": "4.0.0",
+        "redux-persist": "^6.0.0",
         "styled-components": "5.3.3",
         "stylis": "4.0.10",
         "stylis-plugin-rtl": "2.1.1",
