--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
         "react-autosuggest": "10.1.0",
         "react-beautiful-dnd": "13.1.0",
         "react-dom": "17.0.2",
-        "react-draft-wysiwyg": "1.14.7",
+        "react-draft-wysiwyg": "^1.14.7",
         "react-draggable": "4.4.4",
         "react-hook-form": "7.22.0",
         "react-i18next": "11.15.1",
