--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "dependencies": {
         "@ckeditor/ckeditor5-build-classic": "^33.0.0",
+        "@ckeditor/ckeditor5-react": "^4.0.0",
         "@date-io/date-fns-jalali": "2.11.0",
         "@emotion/cache": "11.7.1",
         "@emotion/react": "11.7.1",
