--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
         "@mui/utils": "5.2.3",
         "@mui/x-data-grid": "5.2.0",
         "@reduxjs/toolkit": "1.7.0",
-        "antd": "^4.19.2",
         "apexcharts": "3.32.0",
         "auth0-lock": "11.31.1",
         "autosuggest-highlight": "3.2.0",
@@ -35,6 +34,7 @@
         "date-fns-jalali": "2.27.0-0",
         "draft-js": "0.11.7",
         "draftjs-to-html": "0.9.1",
+        "emoji-picker-react": "^3.5.1",
         "firebase": "9.6.1",
         "framer-motion": "5.5.1",
         "google-map-react": "2.1.10",
