--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "framer-motion": "5.5.1",
         "google-map-react": "2.1.10",
         "history": "5.1.0",
+        "html-react-parser": "^1.4.12",
         "i18next": "21.6.0",
         "jwt-decode": "3.1.2",
         "keycode": "2.2.1",
