--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
         "react-apexcharts": "1.3.9",
         "react-autosuggest": "10.1.0",
         "react-beautiful-dnd": "13.1.0",
+        "react-csv": "^2.2.2",
         "react-dom": "17.0.2",
         "react-draft-wysiwyg": "^1.14.7",
         "react-draggable": "4.4.4",
